[package]
name = "webrtc-media"
version = "0.0.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/simmons/webrtc-media"
keywords = ["webrtc" ]
categories = ["network-programming"]
description = "[WIP] WebRTC media transport"
readme = "README.md"

[dependencies]
